--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-asgiref @ file:///home/conda/feedstock_root/build_artifacts/asgiref_1642912811357/work
-certifi==2021.10.8
-Django @ file:///home/conda/feedstock_root/build_artifacts/django_1638897748254/work
+Django == 4.0
 psycopg2==2.9.3
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1633452062248/work
-sqlparse @ file:///home/conda/feedstock_root/build_artifacts/sqlparse_1631317292236/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1638334978229/work
-wincertstore==0.2
+
